2006-03-19  Mark D. Baushke  <mdb@gnu.org>

	* closeout.c, fnmatch.c, fnmatch_loop.c, gai_strerror.c,
	getaddrinfo.h, getcwd.c, getlogin_r.c, getlogin_r.h, glob.c,
	lstat.c, openat.h, pagealign_alloc.c, regex.h, setenv.c,
	socket_.h, time_r.c, time_r.h, unsetenv.c, xalloc-die.c: Update
	from GNULIB.
	* Makefile.gnulib, Makefile.in: Regenerated.

2006-01-26  Mark D. Baushke  <mdb@gnu.org>

	* stdbool_.h: Update from GNULIB.

2006-01-25  Mark D. Baushke  <mdb@gnu.org>

	* chdir-long.c, getopt.c, gettime.c, glob-libc.h, glob_.h,
	intprops.h, md5.c, md5.h, mkdirat.c, openat-priv.h, openat.c,
	openat.h, quotearg.c, regex_internal.h, save-cwd.c, socket_.h,
	stdbool_.h, stdint_.h, strftime.c, vasnprintf.c: Update from
	GNULIB.

2005-12-07  Mark D. Baushke  <mdb@gnu.org>

	* stdint_.h: Update from GNULIB.

2005-11-27  Mark D. Baushke  <mdb@gnu.org>

	* getaddrinfo.h, getcwd.c, md5.c, md5.h: Update from GNULIB.

2005-11-14  Mark D. Baushke  <mdb@gnu.org>

	* system.h (FOLD_FN_CHAR): Distinguish OSX_ and VMS_ variations
	based on USE_VMS_FILENAME macro.

2005-11-09  Mark D. Baushke  <mdb@gnu.org>

	* system.h (FOLD_FN_CHAR): Create a VMS alternative of this macro
	(patch suggested by Piet Schuermans <pschuermans@mac.com>).
	
2005-10-20  Derek Price  <derek@ximbiot.com>

	 * md5.c, md5.h, strcasecmp.c, strncasecmp.c: Update from GNULIB.

2005-10-05  Derek Price  <derek@ximbiot.com>

	* getaddrinfo.h, getdelim.c, md5.h: Update from GNULIB.

2005-10-04  Derek Price  <derek@ximbiot.com>

	* getaddrinfo.h, getdelim.c: Update from GNULIB.

	* sunos57-select.c, system.h: Assume <unistd.h>.

2005-10-03  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Remove xreadlink.  Add mbchar.
	* Makefile.gnulib: Regenerated.
	* creat-safer.c, fcntl--.h, fcntl-safer.h, open-safer.c, openat-die.c:
	New files from GNULIB.
	* canonicalize.c, dup2.c, ftruncate.c, getaddrinfo.c, getaddrinfo.h,
	getcwd.c, getcwd.h, getdate.c, getdate.y, getdelim.c, getopt_.h,